# Ferminal

./: .SRCINFO  LICENSE  PKGBUILD  README.md  ferminal.py  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
docs/: index.html  main.py
docs/about/: index.html
docs/assets/css/: docs.css  style.css
docs/assets/js/: main.js
docs/author/: index.html
docs/basic-commands/: index.html
docs/docs/commands/: index.html
docs/docs/git/: index.html
docs/docs/installation/: index.html
docs/documentation/: index.html
docs/documentation/basic-commands/: index.html
docs/documentation/git/: index.html
docs/documentation/installer/: index.html
docs/git/: index.html
documentation 1.0/: author.html  commands.html  documentation.html  git.html  index.html  installer.html
documentation 1.0/css/: docs.css  style.css
src/ferminal/: main.py
