[project]
name = "ferminal"
version = "1.3.2"
description = "Custom Wrapper CLI to make your work faster"
authors = [
    {name="RangS"}
]

dependencies = [
    "requests"
    "colorama"
]

[project.scripts]
ferminal = "ferminal.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"